<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

        <item
            android:id="@+id/fitursearch"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/searching"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/menu_favorit"
            android:title="@string/favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            app:showAsAction="always"  />

        <item
            android:id="@+id/menu_notif"
            android:title="@string/reminder_setting"
            android:icon="@drawable/ic_baseline_notifications_none_24"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_bahasa"
            android:title="@string/language"
            android:icon="@drawable/ic_baseline_settings_24"
            />



</menu>